<resources>
  <string name="app_name">Listy</string>
  <string name="add_task">Add Task</string>
  <string name="clear_finished">Clear Finished</string>
  <string name="add_a_new_task">Add a new task</string>
  <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="menu" />
    <string name="task_name">Task Name</string>
  <string name="add_a_note">Add a Note</string>
  <string name="add_to_list">Add to List</string>
  <string name="due_date">Due Date</string>
  <string name="repeat">Repeat</string>
  <string name="reminder">Reminder</string>
  <string name="add_a_task">Add a Task</string>
  <string name="date">Date</string>
  <string name="quick_add_task">Quick Add Task</string>
  <string name="add">Add</string>
  <string name="click_to_add_task">Click to add task</string>
  <string name="menu_navigation">Menu navigation</string>
  <string name="settings">Settings</string>
    <string name="expand_subtasks">expand subtasks</string>
    <string name="due_date_task_item">Due Date:</string>
  <string name="reminder_task_item">Reminder:</string>
  <string name="edit_task">edit task</string>
  <!-- to toggle the open close button of the navigation drawer -->
  <string name="nav_open">Open</string>
  <string name="nav_close">Close</string>
</resources>
