<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:background="@color/blue_grey"
    android:paddingTop="16dp"
    android:titleTextColor="@android:color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
    <TextView
      android:id="@+id/addTaskTitle"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:text="@string/add_a_task"
      android:gravity="center"
      android:textColor="@android:color/white"
      android:textSize="18sp"
      />
  </androidx.appcompat.widget.Toolbar>

  <!--  Task Name Input  -->
  <EditText
    android:id="@+id/taskName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/task_name"
    android:background="@color/white"
    android:paddingTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    android:autofillHints="Create a name for your task"
    android:inputType="text" />
  <!-- Notes Input -->
  <EditText
    android:id="@+id/editTextNotes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/add_a_note"
    app:layout_constraintTop_toBottomOf="@+id/taskName"
    android:layout_marginTop="10dp"
    android:inputType="text" />
  <!-- Subtasks Section (Expandable) -->
  <!-- use a LinearLayout, RecyclerView, or ExpandableListView -->


  <!-- Add to List -->
  <Button
    android:id="@+id/addToListSpinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/add_to_list"
    android:textColor="@color/black"
    style="?android:spinnerStyle"
    app:layout_constraintTop_toBottomOf="@id/editTextNotes"
    android:layout_margin="10dp"/>



  <!-- Due Date -->
  <Button
    android:id="@+id/dueDatePicker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/due_date"
    android:textColor="@color/black"
    style="?android:spinnerStyle"
    app:layout_constraintTop_toBottomOf="@id/addToListSpinner"
    android:layout_margin="10dp"
    />


  <!-- Reminder -->
  <Button
    android:id="@+id/reminderDatePicker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/reminder"
    android:textColor="@color/black"
    style="?android:spinnerStyle"
    app:layout_constraintTop_toBottomOf="@id/dueDatePicker"
    android:layout_margin="10dp"
    />
  <!-- Repeat Option -->
  <Button
    android:id="@+id/repeatSpinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/repeat"
    android:textColor="@color/black"
    style="?android:spinnerStyle"
    app:layout_constraintTop_toBottomOf="@id/reminderDatePicker"
    android:layout_margin="10dp"
    />


  <!-- Add Task Button -->
  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fabButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:src="@drawable/ic_add_task_check"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    android:layout_marginTop="10dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
