<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/drawerLayout"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/blue_grey">

      <!-- ActionBar (Toolbar) -->
      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_grey"
        android:paddingTop="16dp"
        android:titleTextColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">

        <ImageButton
          android:id="@+id/settingsButton"
          android:layout_width="wrap_content"
          android:layout_height="?attr/actionBarSize"
          android:layout_gravity="end"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:contentDescription="@string/settings"
          android:padding="16dp"
          android:src="@drawable/ic_settings" />

        <!-- Date TextView centered in ActionBar -->
        <TextView
          android:id="@+id/dateTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginStart="?attr/actionBarSize"
          android:layout_marginEnd="?attr/actionBarSize"
          android:text="@string/date"
          android:textColor="@android:color/white"
          android:textSize="18sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      </androidx.appcompat.widget.Toolbar>

      <RelativeLayout
        android:id="@+id/linearButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
      </RelativeLayout>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/boarder"
        app:layout_constraintBottom_toTopOf="@id/quickAddLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearButtonLayout"
        app:layout_constraintVertical_bias="0.0" />
      <!-- Floating action button -->
      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_task"
        app:layout_constraintBottom_toTopOf="@id/quickAddLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/click_to_add_task" />

      <LinearLayout
        android:id="@+id/quickAddLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        android:orientation="horizontal"

        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
          android:id="@+id/editTextTask"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/quick_add_task"
          android:minHeight="48dp"
          android:inputType="text"/>

        <Button
          android:id="@+id/buttonAddTask"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/add"
          app:layout_constraintEnd_toEndOf="parent" />
      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </RelativeLayout>

  <com.google.android.material.navigation.NavigationView
    android:id="@+id/navigationView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/nav_header"
    app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
